--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@ $font-stack:    "Helvetica Neue",Arial,sans-serif;
 $font-color: #333;
 $background-image: 'http://colourlovers.com.s3.amazonaws.com/images/patterns/2596/2596465.png';
 $section-background-color: #FFFFFF;
+$default-color:#D8EAEA;
 @mixin section($width){
 			background-color: $section-background-color;
 			width: $width;
@@ -18,13 +19,35 @@ html{
 	font-size: 14px;
 	color:$font-color;
 	line-height: 18px;
-	background-color: #D8EAEA;
+	background-color: $default-color;
 	background-image: url($background-image);
 	body{
 		background: none;
 		width: 890px;
 		padding: 56px 23px 15px;
 		margin: 0 auto;
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		header{
+			position:absolute;
+			left:0;
+			right:0;
+			top:0;
+			height:46px;
+			font-family:Lobster;
+			background-color: white;
+			text-align: center;
+			font-size: 38px;
+			line-height: 36px;
+			border-bottom: 2px solid rgba(0,0,0,0.15);
+			cursor:default;
+			color:$default-color;
+			text-shadow: 0px 2px 1px #bbb;
+		}
 		#people{
 			@include section(290px);
 			div{
@@ -36,12 +59,6 @@ html{
 		}
 		#newPerson{
 			@include section(290px);
-			label{
-				display: inline-block;
-				margin-bottom: 5px;
-				font-weight: bold;
-				color: #aaa;
-			}
 			button{
 				width:100%;
 			}
@@ -52,7 +69,7 @@ html{
 			padding:0;
 			div{
 				position: relative;
-				padding: 9px 12px;
+				padding: 1em;
 				border-bottom: 1px solid #e1e8ed;
 				img{
 					width:100%;
@@ -63,6 +80,8 @@ html{
 					white-space: pre-wrap;
 					word-wrap: break-word;
 					display: block;
+				}
+				img+label,iframe+label{
 					margin-top: 1em;
 				}
 			}
@@ -132,4 +151,13 @@ input{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+h4{
+	margin:0;
+	padding:0;
+	display: inline-block;
+	margin-bottom: 5px;
+	font-weight: bold;
+	color: #aaa;
+	line-height: 1em;
 }
