--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,8 @@ html {
       border-bottom: 2px solid rgba(0, 0, 0, 0.15);
       cursor: default;
       color: #d8eaea;
-      text-shadow: 0px 2px 1px #bbb; }
+      text-shadow: 0px 2px 1px #bbb;
+      z-index: 2; }
     html body #people {
       background-color: white;
       width: 290px;
@@ -84,6 +85,17 @@ html {
           display: block; }
         html body #timeline div img + label, html body #timeline div iframe + label {
           margin-top: 1em; }
+      html body #timeline #load-more {
+        width: 100%; }
+    html body #up-link {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      padding: 1em;
+      color: #333333; }
+    html body #up-link:hover {
+      background-color: rgba(255, 255, 255, 0.5); }
 
 i {
   text-decoration: underline;
